--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="container">
     <div class="row">
       <div class="one-column" style="margin-top: 50%">
-        <h2>Cameron Pam</h2>
+        <h2>Cameron M. Pam</h2>
         <h4>Front-End Development + UX</h4>
         <p></p>
       </div>
